<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourite</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="music_player">NOW PLAYING</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="app_icon_description">Application Icon</string>
    <string name="text_nav">Welcome to\nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="more_options">More Options</string>
    <string name="song_album">Song Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add to Queue</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>
    <string name="play_next">Play Next</string>
    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
    <string name="playlist_note">Tip: Click On ➕ To Create New Playlist. </string>
    <string name="playlist_img_cd">Playlist Image</string>
    <string name="navigation_library_title">Library</string>
    <string name="navigation_playlist_title">Playlists</string>
    <string name="navigation_account_title">Account</string>
    <string name="interpunction">·</string>
    <string name="music_view_detail">Music View Detail\n</string>
    <string name="previousBtnPA">previousBtnPA</string>
    <string name="playpausebutton">PlayPauseButton</string>
    <string name="recordingbutton">recordingButton</string>
    <string name="stoprecordingbutton">stopRecordingButton</string>
    <string name="volume_booster">Volume Booster</string>
    <string name="account_button">Information</string>
    <string name="account">Account</string>
    <string name="play_pause_btn">Play or Pause</string>
    <string name="next_btn">Next</string>
    <string name="home_header">Welcome!</string>
    <string name="welcome_message">Welcome to Music Player</string>
    <string name="recently_played">Recently Played</string>
    <string name="recommended_for_you">Recommended for You</string>
    <string name="music">Music</string>
    <string name="rename">Rename</string>
    <string name="delete">Xóa bản tải xuống</string>
    <string name="share">Share</string>
    <string name="scroll_to_top">Scroll to top\n</string>
    <string name="timer_5_min">5 Minutes</string>
    <string name="timer_10_min">10 Minutes</string>
    <string name="timer_30_min">30 Minutes</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="play">Play</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="shuffle_playlist">Shuffle Playlist</string>
    <string name="delete_playlist">Delete this playlist</string>
    <string name="more_features_playlist">More features for playlist</string>
    <string name="playlist_song_count_format">%d songs</string> <!-- Added for song count -->
    <string name="created_by_format">Created by %s</string>
    <string name="history_btn">Download</string> <!-- Added for creator text -->
    <string name="queue_btn">Queue</string>
    <string name="empty_queue_message">Your queue is empty.</string>
    <string name="editBtnPD">edit button</string>
    <string name="save_playlist_changes">Save playlist</string>
    <string name="theme_mode">Theme mode</string>
    <string name="light_mode">LIGHT</string>
    <string name="dark_mode">DARK</string>
    <string name="system_default">DEFAULT</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>

    <!-- Strings for AccountFragment -->
    <string name="profile_image_desc">Profile image</string>
    <string name="username_placeholder">Username</string>
    <string name="account_info_title">My account</string>
    <string name="email_label">Email:</string>
    <string name="email_placeholder">user@example.com</string>
    <string name="password_label">Mật khẩu:</string>
    <string name="password_placeholder">********</string>
    <string name="change_password_button">Đổi mật khẩu</string>
    <string name="logout_button">Đăng xuất</string>
    <string name="uploaded_music_title">My cloud</string>
    <string name="upload_music_button_desc">Upload music</string>
    <string name="no_uploaded_music">Chưa có file nhạc nào được tải lên.</string>

    <!-- Strings for AccountFragment Kotlin file -->
    <string name="settings_error">Cannot open Settings: %s</string>
    <string name="invalid_music_url">URL nhạc không hợp lệ</string>
    <string name="music_action_prompt">Bạn muốn làm gì với bài này?</string>
    <string name="play_music">Phát nhạc</string>
    <string name="check_network_connection">Vui lòng kiểm tra kết nối mạng</string>
    <string name="download_music">Tải về</string>
    <string name="cancel">Hủy</string>
    <string name="download_title">Tải: %s</string>
    <string name="download_description">Đang tải file nhạc…</string>
    <string name="downloading_music">Đang tải %s…</string>
    <string name="download_error">Lỗi khi tải: %s</string>
    <string name="load_music_failed">Failed to load music: %s</string>

    <!-- Strings for UploadActivity -->
    <string name="upload_music_title">Upload music</string>
    <string name="upload_music_image_desc">Upload music icon</string>
    <string name="hint_enter_music_name">Enter music name</string>
    <string name="hint_enter_singer">Enter singer</string>
    <string name="hint_enter_album">Enter album</string>
    <string name="save_button_text">Save</string>
    <string name="no_file_selected">No file selected</string>
    <string name="change_selection">Change Selection</string>

    <!-- Strings for Login and Signup screens -->
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_prompt_text">Don\'t have an account? Sign up</string>
    <string name="create_account_text">Create Account</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="login_prompt_text">Already registered? Login</string>
    <string name="music_player_icon_desc">Music Player Icon</string>

    <!-- Strings for Download Feature -->
    <string name="confirm_download_title">Unavailable on this device</string>
    <string name="confirm_download_message">This song is not downloaded. Do you want to download it to play?</string>
    <string name="download_and_play">Download &amp; Play</string>
    <string name="download_button_desc">Download song</string>
    <string name="confirm_delete_download_title">Confirm</string>
    <string name="confirm_delete_download_message">Are you sure you want to remove the downloaded version of this song from your device?</string>
    <string name="confirm_remove_song_title">Remove Song</string>
    <string name="confirm_remove_song_message">Do you want to remove \"%1$s\" from My Cloud?</string>
    <string name="remove_song_confirm">Remove</string>
    <string name="download_list_title">Danh sách nhạc có thể tải</string>
</resources>

