<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <View
        android:id="@+id/bottomSheetIndicator"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bottom_sheet_indicator_bg" />

    <TextView
        android:id="@+id/bs_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_download_title"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="?attr/colorOnSurface"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/bs_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_download_message"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bs_positive_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_and_play"
        android:backgroundTint="@color/tonal_button_icon_blue"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bs_negative_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tonal_button_icon_blue"
        android:text="@string/cancel" />

</LinearLayout>
