<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:maxWidth="500dp"
    tools:context=".activity.PlayerActivity">

    <!-- HEADER -->
    <RelativeLayout
        android:id="@+id/headerPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="500dp">

        <!--BACK BUTTON-->
        <ImageView
            android:id="@+id/backBtnPA"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:contentDescription="@string/back_btn"
            android:focusable="true"
            android:paddingHorizontal="25dp"
            android:src="@drawable/chevron_down_solid"
            app:tint="@color/white"/>

        <!-- NOW PLAYING TEXT-->
        <TextView
            android:id="@+id/now_playing_text"
            android:layout_width="wrap_content"
            android:maxWidth="250dp"
            android:layout_height="30dp"
            android:layout_toEndOf="@id/backBtnPA"
            android:layout_toStartOf="@id/moreInfoButtonPA"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/music_player"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:shapeAppearanceOverlay="@style/curved" />

        <!-- MORE BUTTON-->
        <ImageView
            android:id="@+id/moreInfoButtonPA"
            android:layout_width="73dp"
            android:layout_height="48dp"
            android:paddingEnd="25dp"
            android:paddingStart="17dp"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:contentDescription="@string/music_view_detail"
            android:focusable="true"
            android:src="@drawable/ellipsis_vertical_solid"
            android:text="@string/music_view_detail"
            app:tint="@color/white"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!-- COVER ART-->
    <FrameLayout
        android:id="@+id/CoverFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toTopOf="@+id/musicControlButtons"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerPA">

        <!--CURRENT SONG ALBUM COVER-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/songImgPA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/music_player_icon_slash_screen"
            app:shapeAppearanceOverlay="@style/cover_curved_in_player" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/musicControlButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/SongNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- CURRENT SONG NAME-->
            <TextView
                android:id="@+id/songNamePA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/favouriteBtnPA"
                android:layout_marginStart="25dp"
                android:gravity="start"
                android:singleLine="true"
                android:text="@string/song_name"
                android:textColor="@color/black_level1"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- FAVOURTIE BUTTON -->
            <ImageButton
                android:id="@+id/favouriteBtnPA"
                android:layout_width="68dp"
                android:layout_height="48dp"
                android:paddingEnd="30dp"
                android:paddingStart="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favourites_btn"
                android:src="@drawable/favourite_empty_icon"
                android:scaleType="fitCenter"
                app:tint="@android:color/holo_red_dark" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/SongDurationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:paddingHorizontal="25dp">

            <!-- START TIME-->
            <TextView
                android:id="@+id/tvSeekBarStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/start_tv"
                android:textColor="@color/black_level2"
                android:textSize="12sp" />

            <!-- PROGRESS BAR -->
            <SeekBar
                android:id="@+id/seekBarPA"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/tvSeekBarEnd"
                android:layout_toEndOf="@id/tvSeekBarStart"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:progressBackgroundTint="@color/black"
                android:progressTint="@color/black"
                android:thumb="@drawable/thumb"
                android:thumbTint="@color/black_level2"

                />

            <!-- END TIME-->
            <TextView
                android:id="@+id/tvSeekBarEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/start_tv"
                android:textAlignment="textEnd"
                android:textColor="@color/black_level2"
                android:textSize="12sp" />

        </RelativeLayout>

        <!-- MUSIC CONTROL BUTTONS -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:paddingHorizontal="25dp"
            android:gravity="center">

            <!--REPEAT BUTTON-->

            <!-- PLAY PREVIOUS BUTTON -->
            <ImageView
                android:id="@+id/repeatBtnPA"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/repeat_btn"
                android:padding="13.5dp"
                android:src="@drawable/repeat_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/previousBtnPA"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black_level2" />

            <ImageView
                android:id="@+id/previousBtnPA"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/previousBtnPA"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/previous_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/playPauseBtnPA"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/repeatBtnPA"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black_level1" />

            <!-- PLAY / PAUSE BUTTON -->
            <LinearLayout
                android:id="@+id/playPauseBtnPA"
                android:contentDescription="@string/playpausebutton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/shadow_circle"
                android:clickable="true"
                android:elevation="1dp"
                android:focusable="true"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nextBtnPA"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/previousBtnPA"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/playPauseImgPA"
                    android:contentDescription="@string/playpausebutton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:src="@drawable/pause_icon"
                    app:tint="@color/black_level1" />
            </LinearLayout>

            <!-- PLAY NEXT -->
            <ImageView
                android:id="@+id/nextBtnPA"
                android:contentDescription="@string/play_next"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/next_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/timerBtnPA"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/playPauseBtnPA"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black_level1" />

            <!-- TIMER BUTTON-->
            <ImageView
                android:id="@+id/timerBtnPA"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/timer_btn"
                android:padding="12dp"
                android:src="@drawable/timer_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/nextBtnPA"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black_level2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- OPTIONAL BUTTONS ROW -->
        <LinearLayout
            android:id="@+id/optionalButtonsRow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingHorizontal="45dp"
            android:orientation="horizontal">

            <!-- RECORDING KARAOKE BUTTON -->
            <ImageButton
                android:id="@+id/recordingBtnPA"
                android:contentDescription="@string/recordingbutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/microphone"
                app:tint="@color/black_level2" />

            <ImageButton
                android:id="@+id/stoprecordingBtnPA"
                android:contentDescription="@string/stoprecordingbutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/microphone_slash"
                app:tint="@color/black_level2" />

            <!-- EQUALIZER BUTTON-->
            <ImageButton
                android:id="@+id/equalizerBtnPA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/equalizer_btn"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/equalizer_icon"
                app:tint="@color/black_level2" />

            <!-- SHARE BUTTON -->
            <ImageButton
                android:id="@+id/shareBtnPA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/share_btn"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/share_icon"
                app:tint="@color/black_level2" />

            <!-- VOLUME BOOSTER BUTTON -->
            <ImageButton
                android:id="@+id/boosterBtnPA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/volume_booster"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/volume_icon"
                app:tint="@color/black_level2" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>